testdata/cot/invalid/semantic_errors/undefined_variable.cot
// Undefined variable - should fail semantic analysis

fn main() {
    var x = undefined_variable + 1
}
